<resources>
    <string name="app_name">Late Email</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_send_late_mail">Send Late Mail</string>
    <string name="action_change_settings">Change Settings</string>
    <string name="hint_managerial_greetings">Managerial Greetings</string>
    <string name="hint_manager_email">Manager Email</string>
    <string name="hint_hr_email">HR email</string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_mail_body">Mail Body</string>
    <string name="action_save">SAVE</string>
</resources>
